--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "salaDeJuegos": {
+    "saladejuegos": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -25,6 +25,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
@@ -57,10 +58,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "salaDeJuegos:build:production"
+              "buildTarget": "saladejuegos:build:production"
             },
             "development": {
-              "buildTarget": "salaDeJuegos:build:development"
+              "buildTarget": "saladejuegos:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -68,7 +69,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "salaDeJuegos:build"
+            "buildTarget": "saladejuegos:build"
           }
         },
         "test": {
@@ -88,6 +89,23 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "version": 2
+          },
+          "configurations": {
+            "production": {
+              "buildTarget": "saladejuegos:build:production",
+              "serveTarget": "saladejuegos:serve:production"
+            },
+            "development": {
+              "buildTarget": "saladejuegos:build:development",
+              "serveTarget": "saladejuegos:serve:development"
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     }
